backend_addtask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: add
  template:
    metadata:
      labels:
        app: add
    spec:
      containers:
      - name: addct
        image: devopsinsiders/micro-addtask
        ports:
        - containerPort: 8000
